[wip] New project structure
